k8s/overlays/prod/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-mcp-mimir-vs
spec:
  hosts:
    - "sample-metrics-prod-01.albertsons.com"
